syntax = "proto3";

package com.charroux;

option java_multiple_files = true;
option java_package = "com.charroux.lib";
option java_outer_classname = "AgreementServiceProto";

service AgreementService {
  rpc RentCars(stream CreditApplication) returns (stream Agreement) {}
}

message CreditApplication {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  uint32 price = 4;
}

message Agreement {
  string creditReservedEvent = 1;
}